Edge: validation is overlapping with dropdown in event hub connection. Fixes #1095

--- a/AzureFunctions.AngularClient/src/app/binding-input/binding-input.component.css
+++ b/AzureFunctions.AngularClient/src/app/binding-input/binding-input.component.css
@@ -96,3 +96,9 @@ button.go {
 .methods-list input {
     margin-left:0px
 }
+
+.hide-arrow {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
